# notebooks-pre-commit

./: .pre-commit-hooks.yaml  README.md  pyproject.toml
hooks/: downscale_images_in_notebooks.py
